<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/TextStyle.Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_huge" />

    <TextView
        android:id="@+id/txtLastSync"
        style="@style/TextStyle.Title.Sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Last sync: " />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_normal"
        android:layout_marginStart="@dimen/margin_padding_normal"
        android:layout_marginTop="@dimen/margin_padding_small"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSyncToServer"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sync_to_server"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDownload"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_padding_small"
            android:layout_weight="1"
            android:text="@string/down_load_from_server"
            android:textAllCaps="true"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDelete"
        style="@style/Button.Warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_padding_normal"
        android:layout_marginStart="@dimen/margin_padding_normal"
        android:layout_marginTop="@dimen/margin_padding_very_small"
        android:text="@string/delete_all"
        android:textAllCaps="true"
        android:textColor="@color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerSMS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        tools:listitem="@layout/sms_item" />
</LinearLayout>