<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_padding_large"
            android:paddingStart="@dimen/margin_padding_large">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_padding_normal"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_huge" />


            <LinearLayout
                android:id="@+id/llId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/hint_user_id"
                        android:paddingBottom="@dimen/margin_padding_very_small"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editId"
                            style="@style/TextAppearence.App.TextInputEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start|bottom"
                            android:imeOptions="actionGo"
                            android:inputType="text|textNoSuggestions"
                            android:paddingTop="@dimen/margin_padding_very_small"
                            android:textCursorDrawable="@drawable/cursor_drawable" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="@dimen/margin_padding_small"
                    android:background="@color/gray" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_large"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>